2007-08-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-at-commandline.in.in: don't use '==', and improve
	portability with empty strings

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* default-applications-accessibility.desktop.in.in:
	* gnome-at-mobility.desktop.in.in:
	* gnome-at-visual.desktop.in.in: remove spurious desktop entries
	(bug #444787)

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* gnome-default-applications-properties.glade:
	* gnome-da-capplet.c: Change the custom command entries to be
	insensitive, instead of noneditable, unless we are a custom
	command.  (#456308)

2007-07-08  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* default-applications-accessibility.desktop.in.in:
	* default-applications.desktop.in.in:
	* gnome-at-mobility.desktop.in.in:
	* gnome-at-session.desktop.in.in:
	* gnome-at-visual.desktop.in.in: fix bugzilla info and clean up the
	Makefile a bit

2007-07-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-da-capplet.c: (entry_focus_out_event_cb),
	(terminal_checkbutton_toggled_cb), (a11y_checkbutton_toggled_cb),
	(web_radiobutton_toggled_cb), (web_combo_changed_cb),
	(mail_combo_changed_cb), (media_combo_changed_cb),
	(terminal_combo_changed_cb), (visual_combo_changed_cb),
	(mobility_combo_changed_cb), (show_dialog): fix error handling, plug
	some memory leaks, and properly handle unset GConf keys in
	xxx_combo_changed_cb (fixes bug #454103)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* default-applications-accessibility.desktop.in.in: renamed Bugzilla
	product.

2007-04-23  George Kraft IV <gk4@austin.ibm.com>

	* gnome-da-applet.c: better icons for A11Y categories.

2007-04-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Patch from SuSE package

	* gnome-default-applications.xml.in: added Seamonkey as web browser and
	mail reader.

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>

	* gnome-default-applications-properties.glade: don't require gnome