@@ -112,6 +112,16 @@
       <win-command>seamonkey -remote "openurl(%s,new-window)"</win-command>
     </web-browser>
     <web-browser>
+      <_name>Iceape</_name>
+      <executable>iceape</executable>
+      <command>iceape %s</command>
+      <icon-name>iceape</icon-name>
+      <run-in-terminal>false</run-in-terminal>
+      <netscape-remote>true</netscape-remote>
+      <tab-command>iceape -remote "openurl(%s,new-tab)"</tab-command>
+      <win-command>iceape -remote "openurl(%s,new-window)"</win-command>
+    </web-browser>
+    <web-browser>
       <_name>Netscape Communicator</_name>
       <executable>netscape</executable>
       <command>netscape %s</command>
@@ -252,6 +262,13 @@
       <executable>seamonkey</executable>
       <command>seamonkey -mail %s</command>
       <icon-name>seamonkey</icon-name>
+      <run-in-terminal>false</run-in-terminal>
+    </mail-reader>
+    <mail-reader>
+      <_name>Iceape Mail</_name>
+      <executable>iceape</executable>
+      <command>iceape -mail %s</command>
+      <icon-name>iceape</icon-name>
       <run-in-terminal>false</run-in-terminal>
     </mail-reader>
     <mail-reader>
